<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <EditText
        android:id="@+id/edit_text_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_add_task_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_task_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/dialog_add_task_details_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/edit_text_task_title"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/button_show_details"
        android:src="@drawable/icon_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dialog_add_task_details"
        android:text="@string/dialog_add_task_details_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_task_details" />

    <ImageButton
        android:id="@+id/button_star_task"
        android:src="@drawable/icon_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:contentDescription="@string/dialog_add_task_star"
        android:text="@string/dialog_add_task_star_button"
        app:layout_constraintStart_toEndOf="@id/button_show_details"
        app:layout_constraintTop_toTopOf="@id/button_show_details" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_task_save_button"
        app:layout_constraintBottom_toBottomOf="@id/button_show_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_star_task"
        app:layout_constraintTop_toTopOf="@id/button_show_details" />
</androidx.constraintlayout.widget.ConstraintLayout>